[gd_scene load_steps=3 format=3 uid="uid://c38gsdfy72awb"]

[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="1_6hf0t"]
[ext_resource type="Script" path="res://Scripts/GameEffects/TimeEffects.gd" id="2_c8bkv"]

[node name="GameManager" type="Node"]
script = ExtResource("1_6hf0t")

[node name="TimeManager" type="Node" parent="."]
script = ExtResource("2_c8bkv")

[node name="GameTimer" type="Timer" parent="."]
one_shot = true
